--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,16 @@ dependencies:
     sdk: flutter
   get_it: ^8.2.0
   dio: ^5.4.3+1
-
+  pretty_dio_logger: ^1.3.1
+  fpdart: ^1.1.0
+  shared_preferences: ^2.5.3
+  flutter_bloc: ^8.1.3
+  injectable: ^2.1.2
+  connectivity_plus: ^6.1.0
+  go_router: ^15.1.2
+  cached_network_image: ^3.2.3
+  carousel_slider: ^5.1.1
+  video_player: ^2.5.0
 
 
   cupertino_icons: ^1.0.8
@@ -25,6 +34,8 @@ dev_dependencies:
 
 
   flutter_lints: ^4.0.0
+  injectable_generator: ^2.1.5
+  build_runner: ^2.4.6
 
 
 flutter:
