--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   cached_network_image: ^3.2.3
   carousel_slider: ^5.1.1
   video_player: ^2.5.0
+  chewie: ^1.7.0
 
 
   cupertino_icons: ^1.0.8
