--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,11 +2,10 @@ name: ott_platform_task
 description: "ott_platform_task"
 publish_to: 'none'
 
-
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.5.4
+  sdk: '>=3.3.0 <4.0.0'
 
 
 dependencies:
@@ -38,10 +37,10 @@ dev_dependencies:
   injectable_generator: ^2.1.5
   build_runner: ^2.4.6
 
-
 flutter:
 
 
   uses-material-design: true
 
-
+  assets:
+    - assets/icons/
