--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   carousel_slider: ^5.1.1
   video_player: ^2.5.0
   chewie: ^1.7.0
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
@@ -35,6 +36,8 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   injectable_generator: ^2.1.5
   build_runner: ^2.4.6
+  bloc_test: ^9.1.7
+  mocktail: ^1.0.3
 
 flutter:
 
